[gd_scene load_steps=25 format=3 uid="uid://wduj21d75dnl"]

[ext_resource type="Shader" uid="uid://bhjktewdb5dse" path="res://shaders/background.gdshader" id="1_0tnpc"]
[ext_resource type="Script" uid="uid://d17tguwenyq7u" path="res://scripts/game.gd" id="1_trtic"]
[ext_resource type="PackedScene" uid="uid://cvgjn5yck8dbc" path="res://scenes/main_base.tscn" id="1_yqjtg"]
[ext_resource type="PackedScene" uid="uid://d3v5ucblodmcu" path="res://scenes/stations/storage_station.tscn" id="2_lnu2h"]
[ext_resource type="Texture2D" uid="uid://g7e76vkcri2m" path="res://sprites/icon.svg" id="2_vtaks"]
[ext_resource type="Script" uid="uid://bfmxgoaa5febu" path="res://scripts/camera.gd" id="3_lbhrr"]
[ext_resource type="PackedScene" uid="uid://ci073hgekjamw" path="res://scenes/ui/cargo_storage_display.tscn" id="3_lnu2h"]
[ext_resource type="Script" uid="uid://tl20c5y5xo0o" path="res://scripts/audio_stream_crossfader.gd" id="4_iywne"]
[ext_resource type="AudioStream" uid="uid://bb8x2defc6w8d" path="res://sounds/tchoutchouchill.wav" id="5_u5sy4"]
[ext_resource type="PackedScene" uid="uid://7axpi421xeat" path="res://scenes/loop_path.tscn" id="5_vtaks"]
[ext_resource type="AudioStream" uid="uid://c60kjlr0r56ht" path="res://sounds/tchoutchounotchill.wav" id="6_gee14"]
[ext_resource type="PackedScene" uid="uid://21djceuff8ui" path="res://scenes/pin.tscn" id="6_kvpfn"]
[ext_resource type="Texture2D" uid="uid://cgj16etxxne8s" path="res://sprites/play_button.png" id="12_dinhu"]
[ext_resource type="Texture2D" uid="uid://bd4n2vqk8spr5" path="res://sprites/pause_button.png" id="13_kvuet"]

[sub_resource type="Gradient" id="Gradient_0tnpc"]
colors = PackedColorArray(0, 0.462745, 0, 1, 0.737255, 1, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_kvpfn"]
frequency = 0.05

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_0tnpc"]
color_ramp = SubResource("Gradient_0tnpc")
noise = SubResource("FastNoiseLite_kvpfn")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_0tnpc"]
frequency = 0.5

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vtaks"]
seamless = true
seamless_blend_skirt = 0.25
noise = SubResource("FastNoiseLite_0tnpc")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kvuet"]
shader = ExtResource("1_0tnpc")
shader_parameter/big_noise = SubResource("NoiseTexture2D_0tnpc")
shader_parameter/small_noise = SubResource("NoiseTexture2D_vtaks")
shader_parameter/period = 0.004

[sub_resource type="Animation" id="Animation_trtic"]
resource_name = "unchill"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:mix")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_ir15t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:mix")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ca42v"]
resource_name = "chill"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:mix")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ca42v"]
_data = {
&"RESET": SubResource("Animation_ir15t"),
&"chill": SubResource("Animation_ca42v"),
&"unchill": SubResource("Animation_trtic")
}

[node name="Game" type="Node2D" node_paths=PackedStringArray("loop_path", "loop_button", "crossfader_animation_player")]
script = ExtResource("1_trtic")
loop_path = NodePath("LoopPath")
loop_button = NodePath("UI/MarginContainer/LoopButton")
crossfader_animation_player = NodePath("AudioStreamCrossfader/AnimationPlayer")

[node name="Background" type="Polygon2D" parent="."]
z_index = -10
material = SubResource("ShaderMaterial_kvuet")
texture = ExtResource("2_vtaks")
polygon = PackedVector2Array(-100000, -100000, -100000, 100000, 100000, 100000, 100000, -100000)
uv = PackedVector2Array(0, 0, 0, 128, 128, 128, 128, 0)

[node name="MainBase" parent="." instance=ExtResource("1_yqjtg")]

[node name="StorageStation" parent="MainBase" instance=ExtResource("2_lnu2h")]

[node name="LoopPath" parent="." instance=ExtResource("5_vtaks")]
position = Vector2(0, -400)

[node name="Pin" parent="." instance=ExtResource("6_kvpfn")]
position = Vector2(-300, 0)

[node name="Pin2" parent="." instance=ExtResource("6_kvpfn")]
position = Vector2(300, 0)

[node name="PanZoomCamera" type="Camera2D" parent="."]
position = Vector2(0, -150)
script = ExtResource("3_lbhrr")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 4

[node name="CargoStorageDisplay" parent="UI/MarginContainer" instance=ExtResource("3_lnu2h")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="LoopButton" type="TextureButton" parent="UI/MarginContainer"]
modulate = Color(0.412, 0.412, 0.412, 1)
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
disabled = true
toggle_mode = true
texture_normal = ExtResource("12_dinhu")
texture_pressed = ExtResource("13_kvuet")
stretch_mode = 0

[node name="AudioStreamCrossfader" type="Node" parent="." node_paths=PackedStringArray("audio_stream_player_1", "audio_stream_player_2")]
script = ExtResource("4_iywne")
audio_stream_player_1 = NodePath("ChillAudioStreamPlayer")
audio_stream_player_2 = NodePath("NotChillAudioStreamPlayer")

[node name="ChillAudioStreamPlayer" type="AudioStreamPlayer" parent="AudioStreamCrossfader"]
stream = ExtResource("5_u5sy4")
autoplay = true

[node name="NotChillAudioStreamPlayer" type="AudioStreamPlayer" parent="AudioStreamCrossfader"]
stream = ExtResource("6_gee14")
volume_db = inf_neg
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AudioStreamCrossfader"]
libraries = {
&"": SubResource("AnimationLibrary_ca42v")
}

[connection signal="loop_closed" from="LoopPath" to="." method="_on_loop_path_loop_closed"]
[connection signal="loop_opened" from="LoopPath" to="." method="_on_loop_path_loop_opened"]
[connection signal="toggled" from="UI/MarginContainer/LoopButton" to="." method="_on_loop_button_toggled"]
